# rashodomer-be

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yaml
alembic/: env.py
alembic/versions/: 2026_01_24_2039-f13e301fb48b_init.py  2026_01_25_1254-5e26973ffc3f_last_login_maybe_null.py  2026_01_27_2128-ae24f490b821_add_tokens_table.py
deploy/: rashodomer.service
rules/: code_rules.md  code_style.md  ui_rules.md
src/: alembic.ini  app.py  base.py  depends.py  enums.py  errors.py  exceptions.py  main.py  managers.py  models.py  repos.py  schemas.py  services.py  settings.py  some.py  utils.py
src/alembic/: env.py
src/alembic/versions/: 2026_01_31_2240-be7e9886e133_init.py  2026_01_31_2329-da7a6b67421d_id_as_str_not_uuid.py  2026_02_09_2243-fbd47ed2398d_add_budgets_table.py
src/api/: app.py  base.py  depends.py  exception_handlers.py  exceptions.py
src/api/auth/: router.py  routes.py  schemas.py
src/api/budget/: router.py  schemas.py
src/api/category/: router.py  schemas.py
src/api/transaction/: router.py  schemas.py
src/app_ui/: constants.py  dependencies.py
src/app_ui/controllers/: budget.py
src/app_ui/pages/: budgets.py
src/core/: entities.py  enums.py  exceptions.py  repos.py  repositories.py  services.py  utils.py
src/core/use_cases/: auth.py  budget_delete.py  budget_update.py  create_budget.py  get_budget.py  list_budgets.py  login_user.py  register_user.py
src/core/use_cases/auth/: authenticate.py  login.py  register.py
src/core/use_cases/budget/: create.py  delete.py  find.py  get.py  list.py  update.py
src/core/use_cases/category/: create.py  (+5 more)
src/db/: __init__.py  alembic.ini  base.py  engine.py  models.py  query.py  repositories.py  utils.py
src/db/alembic/: env.py
src/db/query/: budget.py  token.py  user.py
src/domain/: errors.py  utils.py
src/domain/models/: budget.py  category.py  transaction.py
src/domain/repos/: budget.py  category.py  transaction.py
src/domain/use_cases/: budget.py  category.py
src/fe/: dependencies.py  main.py
src/fe/pages/: budgets.py
src/managers/: auth.py  budget.py  category.py  transaction.py
src/models/: budget.py  category.py  transaction.py
src/repos/: abc.py  files.py
src/routers/: auth.py  budget.py  category.py  transaction.py
src/schemas/: budget.py  category.py  expense.py  income.py  transaction.py  user.py
src/tests/: conftest.py  test_budgets.py  test_users.py  utils.py
src/tests/integration/: conftest.py  test_auth.py  test_budget.py  test_category.py  test_transaction.py  utils.py
src/tests/unit/: conftest.py  test_utils.py
src/ui/: middlewares.py
src/ui/components/: buttons.py  labels.py
src/ui/pages/: auth.py  budgets.py  categories.py  transactions.py  user.py
(+34 files in other folders)
