[project]
name = "rashodomer-be"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "artempelevin", email = "artempelevin@list.ru" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.3",
    "fastapi>=0.128.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "faker>=40.4.0",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]
