[project]
name = "rashodomer-be"
version = "0.0.1"
description = ""  # TODO: add desc
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.9",
    "ty>=0.0.28",
]

[tool.ty.rules]
all = "error"

[tool.ruff]
line-length = 120
target-version = "py313"
fix = true

[tool.ruff.lint]
fixable = ["I"]  # fix only `isort`
select = ["ALL"]
ignore = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in `__init__`
    "D203", # One blank line before class (ignored by D211)
    "D212", # Multi line summary first line (ignored by D213)
    "D400", # First line should end with a period
    "COM812", # Missing trailing comma (skip it because it conflicts with `ruff format`)
    "ISC001", # single-line-implicit-string-concatenation (skip it because it conflicts with `ruff format`)
    "TD002", # Missing T O D O author
    "TD003", # Missing T O D O link
    "RUF001",  # ambiguous-unicode-character-string (skip it because many false positives)
    "RUF002",  # ambiguous-unicode-character-docstring (skip it because many false positives)
    "RUF003",  # ambiguous-unicode-character-comment (skip it because many false positives)
    "ANN",  # flake8-annotations (skip it because using another type checker`)
]

[tool.ruff.lint.per-file-ignores]
"src/tests/**/*.py" = [
    "S101",
    "PLR2004",
]